# analysis-township

./: .gitignore  README.md
frida/: interface_x86.py  package-lock.json  package.json  tsconfig.json
frida/js/: township.js
frida/src/: logger.ts  main.ts
frida/src/hooks/: java.ts  libc.ts  libgame_7.9.0.ts  libgame_7.9.5.ts  libgame_7.9.6.ts  module.ts  ssl.ts
parsing_encoded_xml/: CMakeLists.txt
parsing_encoded_xml/inc/: data.h  decode.h  hash.h  macro.h  types.h  utils.h
parsing_encoded_xml/input/: LocalInfo.xml  input.xml  mGameInfo.xml
parsing_encoded_xml/output/: 2.deocde.xml  2.encode.xml
parsing_encoded_xml/src/: decode.cpp  encode.cpp  hash.cpp  main.cpp  utils.cpp
py_township/: readme.md
py_township/requirements/: requirements.txt
py_township/township/: manage.py
py_township/township/app_root/: urls.py
py_township/township/app_root/analysis/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
py_township/township/app_root/analysis/migrations/: 0001_initial.py
py_township/township/app_root/analysis/templates/: analysis_create.html  analysis_detail.html  analysis_diff.html  analysis_list.html
py_township/township/app_root/contents/: __init__.py  apps.py  models.py  utils.py
py_township/township/app_root/contents/migrations/: 0001_initial.py
py_township/township/app_root/gameinfos/: __init__.py  apps.py  models.py  urls.py  utils.py  views.py
py_township/township/app_root/gameinfos/migrations/: 0001_initial.py  0002_auto_20201231_0633.py
py_township/township/app_root/gameinfos/templates/: gameinfo_detail.html  gameinfo_list.html  parse_game_info.html
py_township/township/app_root/gameinfos/tests/: test_utils.py
py_township/township/app_root/gameinfos/ts_parsers/: constraints.py  xml_nodes.py
py_township/township/app_root/helpers/: __init__.py  apps.py  forms.py  urls.py  views.py
py_township/township/app_root/helpers/templates/: flow-fetch_city.html  flow-fetch_data.html  gzip.html  hex_to_binary.html
py_township/township/app_root/keywords/: __init__.py  apps.py  models.py  offset_info.py  urls.py  utils.py  views.py
py_township/township/app_root/keywords/migrations/: 0001_initial.py  0002_auto_20201224_1547.py
py_township/township/app_root/keywords/templates/: keyword_list.html
py_township/township/app_root/keywords/tests/: test_utils.py
py_township/township/app_root/landing/: __init__.py  apps.py  urls.py  views.py
py_township/township/app_root/landing/templates/: ts_dashboard.html
py_township/township/conf/: asgi.py  wsgi.py
py_township/township/conf/settings/: base.py  local.py
py_township/township/conf/urls/: local.py
py_township/township/core/: __init__.py  context_processors.py  utils.py
py_township/township/core/models/: mixins.py
py_township/township/core/templatetags/: display_tags.py  string_filters.py
py_township/township/core/views/: cursor_pagination.py  mixins.py
py_township/township/modules/: ts_aes.py  ts_aes_data.py  ts_bytes.py  ts_file.py  ts_gzip.py  ts_helper.py  ts_request.py  ts_utils.py
py_township/township/modules/tests/: test_aes.py  test_aes_data.py  test_bytes.py  test_file.py  test_file_data_decode_0x54.py  test_file_data_decode_0x79.py  test_file_data_decode_0x7D.py  test_file_data_hashtable.py  test_request.py  test_ts_gzip.py  test_utils.py
py_township/township/scripts/: init_data.py  ts_dump.py  ts_run.py
py_township/township/static/admin/css/: sb-admin-2.css  sb-admin-2.min.css
py_township/township/static/admin/js/: sb-admin-2.js
py_township/township/templates/: ts_base.html
py_township/township/templates/partials/: cursor_pagination.html  ts_sidebar.html  ts_toolbar.html
township/: CMakeLists.txt  readme.md
township/jsoncpp-1.9.4/: CMakeLists.txt
township/src/: main.cpp
township/ts_dump/: CMakeLists.txt
township/ts_dump/src/: main.cpp
township/ts_dump/x86/: binary.in
township/ts_dump/x86/first/saves/: GlobalVars.xml  LocalInfo.xml  mGameInfo.xml
township/ts_dump/x86/second/saves/: GlobalVars.xml  LocalInfo.xml  mGameInfo.xml
township/ts_dump/x86/second/saves/help_shift_logs/: log.txt
township/ts_dump/x86/third/saves/: GlobalVars.xml  LocalInfo.xml  mGameInfo.bak
township/ts_dump/x86/third/saves/help_shift_logs/: log.txt
township/ts_http/: CMakeLists.txt
township/ts_http/inc/: aes.h  http.h  http_header.h  xmm.h
township/ts_http/src/: aes.cpp  http.cpp  http_header.cpp  xmm.cpp
township/ts_http/tests/: CMakeLists.txt  test_aes.cpp  test_http_header.cpp  test_xmm.cpp
township/ts_util/: CMakeLists.txt
township/ts_util/inc/: logger.h  macro.h  smart_auto_lock.h  types.h  utils.h
township/ts_util/src/: logger.cpp  utils.cpp
township/ts_util/tests/: CMakeLists.txt  test_util.cpp
township/ts_xml/: CMakeLists.txt
township/ts_xml/inc/: compress.h  data.h  decode.h  encode.h  hash.h  rapidxml_print.hpp
township/ts_xml/src/: compress.cpp  decode.cpp  encode.cpp  hash.cpp
township/ts_xml/tests/: CMakeLists.txt  test_compress.cpp  test_decode.cpp  test_hash.cpp
township/ts_xml/tests/input/: mGameInfo.xml
township/zlib-1.2.11/: CMakeLists.txt
township/zlib-1.2.11/test/: example.c
